Add Api Category
